[package]
name = "minesweep"
description = "A mine sweeping game written in Rust"
version = "6.0.28"
authors = ["Phillip Cloud"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/cpcloud/minesweep-rs"
repository = "https://github.com/cpcloud/minesweep-rs"
keywords = ["terminal", "minesweeper", "game"]
readme = "./README.md"

[dependencies]
anyhow = "^1.0.75"
bit-set = "^0.5.3"
ctrlc = "^3.4.0"
num-traits = "^0.2.16"
rand = "^0.8.5"
structopt = "^0.3.26"
termion = "^2.0.1"
thiserror = "^1.0.47"
ratatui = { version = "^0.22.0", features = [
  "termion",
], default-features = false }
typed-builder = "^0.16.0"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 's'
