[package]
name = "minesweep"
description = "A mine sweeping game written in Rust"
version = "6.0.46"
authors = ["Phillip Cloud"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/cpcloud/minesweep-rs"
repository = "https://github.com/cpcloud/minesweep-rs"
keywords = ["terminal", "minesweeper", "game"]
readme = "./README.md"

[dependencies]
anyhow = "^1.0.78"
bit-set = "^0.5.3"
ctrlc = "^3.4.2"
num-traits = "^0.2.17"
rand = "^0.8.5"
structopt = "^0.3.26"
termion = "^2.0.3"
thiserror = "^1.0.53"
ratatui = { version = "^0.25.0", features = [
  "termion",
], default-features = false }
typed-builder = "^0.18.0"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 's'
